Swift 3 and some new fixes

--- a/OctoPodium/Base.lproj/Main.storyboard
+++ b/OctoPodium/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11129.15" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="sxd-VJ-4xu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="sxd-VJ-4xu">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11103.10"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -31,11 +31,11 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="1" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jDn-g3-b3A">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="J83-5a-idI">
-                                    <frame key="frameInset" width="375" height="100"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </view>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="ajV-FI-5bZ">
-                                    <frame key="frameInset" minY="100" width="375" height="49"/>
+                                    <rect key="frame" x="0.0" y="100" width="375" height="49"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </view>
@@ -82,11 +82,11 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="e3g-wf-alS"/>
                                 <exclude reference="7bb-pD-b6r"/>
                                 <exclude reference="dIY-Gj-9Jk"/>
                                 <exclude reference="kw3-99-xnl"/>
                                 <exclude reference="trk-SR-X8u"/>
-                                <exclude reference="e3g-wf-alS"/>
                                 <exclude reference="fkh-RZ-jNY"/>
                             </mask>
                         </variation>
@@ -231,8 +231,8 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="158" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="AYy-DI-0AL">
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
-                                <view key="tableHeaderView" contentMode="scaleToFill" id="OMd-ur-YDH" userLabel="Header">
-                                    <frame key="frameInset" width="375" height="117"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" misplaced="YES" id="OMd-ur-YDH" userLabel="Header">
+                                    <rect key="frame" x="0.0" y="0.0" width="1000" height="117"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </view>
                                 <connections>
@@ -368,12 +368,12 @@
                                         <variation key="default">
                                             <mask key="constraints">
                                                 <exclude reference="YYR-tR-2BE"/>
-                                                <exclude reference="zlR-ox-BdZ"/>
-                                                <exclude reference="qEY-tF-8ae"/>
-                                                <exclude reference="3PP-l3-8e9"/>
-                                                <exclude reference="A7q-Lb-EBE"/>
                                                 <exclude reference="DIP-Ww-bza"/>
                                                 <exclude reference="tX9-96-lhK"/>
+                                                <exclude reference="3PP-l3-8e9"/>
+                                                <exclude reference="zlR-ox-BdZ"/>
+                                                <exclude reference="A7q-Lb-EBE"/>
+                                                <exclude reference="qEY-tF-8ae"/>
                                                 <exclude reference="57S-lZ-u9K"/>
                                                 <exclude reference="UYN-44-2Kb"/>
                                                 <exclude reference="Zvp-vn-T7I"/>
@@ -485,11 +485,11 @@
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="CWP-9g-8GZ"/>
+                                <exclude reference="dUi-aK-8vb"/>
+                                <exclude reference="pZq-Fa-AdX"/>
                                 <exclude reference="8JP-L3-TGa"/>
                                 <exclude reference="Imi-jR-ZO1"/>
                                 <exclude reference="Lzb-e2-a6r"/>
-                                <exclude reference="dUi-aK-8vb"/>
-                                <exclude reference="pZq-Fa-AdX"/>
                                 <exclude reference="zK0-Hk-6Xh"/>
                             </mask>
                         </variation>
@@ -545,7 +545,7 @@
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-6"/>
                     </tabBarItem>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hIC-mA-0b1">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="hIC-mA-0b1">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -770,9 +770,9 @@
                             <mask key="constraints">
                                 <exclude reference="SoS-EE-TsY"/>
                                 <exclude reference="Vt9-Ra-Kcm"/>
-                                <exclude reference="FF9-JN-Afq"/>
                                 <exclude reference="5eq-WY-t7E"/>
                                 <exclude reference="ugt-B4-uLQ"/>
+                                <exclude reference="FF9-JN-Afq"/>
                                 <exclude reference="6BZ-HH-QBe"/>
                             </mask>
                         </variation>
@@ -814,6 +814,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="sxd-VJ-4xu" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="Loq-XY-MpU">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
@@ -1123,8 +1124,8 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="whl-Zf-3lg"/>
                                 <exclude reference="Dh5-0q-q1M"/>
+                                <exclude reference="whl-Zf-3lg"/>
                             </mask>
                         </variation>
                     </view>
@@ -1145,7 +1146,7 @@
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-5"/>
                     </tabBarItem>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1hx-Ca-ZDN">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="1hx-Ca-ZDN">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -1185,7 +1186,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4Dr-wr-ECC" customClass="UsersTable" customModule="OctoPodium" customModuleProvider="target">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="itf-3X-8Mq">
-                                    <frame key="frameInset" width="375" height="105"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="105"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </view>
                             </tableView>
@@ -1276,8 +1277,8 @@
                             </view>
                             <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VFA-0R-hLv" customClass="UsersTable" customModule="OctoPodium" customModuleProvider="target">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <view key="tableHeaderView" contentMode="scaleToFill" id="HsB-PK-W2G">
-                                    <frame key="frameInset" width="375" height="111"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" misplaced="YES" id="HsB-PK-W2G">
+                                    <rect key="frame" x="0.0" y="0.0" width="1000" height="111"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </view>
                             </tableView>
@@ -1371,8 +1372,8 @@
                             </view>
                             <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aNd-06-c9I" customClass="UsersTable" customModule="OctoPodium" customModuleProvider="target">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <view key="tableHeaderView" contentMode="scaleToFill" id="9g3-00-u7o">
-                                    <frame key="frameInset" width="375" height="111"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" misplaced="YES" id="9g3-00-u7o">
+                                    <rect key="frame" x="0.0" y="0.0" width="1000" height="111"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </view>
                             </tableView>
@@ -1443,7 +1444,7 @@
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-5"/>
                     </tabBarItem>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xqw-3a-BWz">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="xqw-3a-BWz">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -1661,7 +1662,7 @@
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-5"/>
                     </tabBarItem>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="r5l-F4-hHy">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="r5l-F4-hHy">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
