--- a/Scripts/ImagesDocumentation/lib/images.html.erb
+++ b/Scripts/ImagesDocumentation/lib/images.html.erb
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>SOF SFA components</title>
+        <title><%= @project_name %> components</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="style.css">
@@ -8,7 +8,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body>
-      <p align="center">Shopfloor App Components</p>
+      <p align="center"><%= @project_name %> Components</p>
       <ul>
         <% @components.each do |component| %>
           <% name = component[:name] %>
